--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-django==1.5.1
-dj-database-url==0.2.1
+Django==1.5.1
 Unipath==1.0
+argparse==1.2.1
+dj-database-url==0.2.1
+dj-static==0.0.5
 gunicorn==0.17.2
-psycopg2
+static==0.4
+wsgiref==0.1.2
